# RightClickResizer

./: .gitignore  LICENSE  README.md  SKILLS.md  build.bat  generate_test_image.py  git_setup.bat  git_update.bat  pyproject.toml  requirements.txt  test_fixes.py
src/: config.py  context_menu.py  installer.py  main.py  resizer.py  video_converter.py
tests/: test_config.py  test_resizer.py  test_video_converter.py
